fix bugs on tablet responsiveness

--- a/src/components/account/account.css
+++ b/src/components/account/account.css
@@ -9,7 +9,7 @@ width: 100vw;
     height: 100vh;
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 970px){
     .account__content{
         margin: 0rem 2rem;
         height: 100vh;
