--- a/src/components/bottom/bottom.css
+++ b/src/components/bottom/bottom.css
@@ -5,7 +5,7 @@
     height: 600px;
     justify-content: space-around;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 970px) {
     .bottom {
      flex-direction: column;
     }
