--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -36,7 +36,7 @@ color: #000000;
     padding: 8px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 970px) {
     .desktop-nav{
     display: none;
     }
