--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -51,7 +51,7 @@
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 970px) {
     .hero-title{
         font-size: 25px;
     }
