--- a/src/main.css
+++ b/src/main.css
@@ -97,7 +97,7 @@ input:focus{
     color: white; 
   }
   
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 970px) {
     .button{
       width: 70%;
     }
